fix: decrease project img z-index
problem: showed up on mobile nav

--- a/components/style/navigation.module.scss
+++ b/components/style/navigation.module.scss
@@ -110,6 +110,7 @@
           flex-direction: column;
           width: 100%;
           height: 100vh;
+
           position: absolute;
           top: 0;
           left: 0;
@@ -213,7 +214,7 @@
 }
 
 .navNotOnTop {
-     background-color: rgba(255, 255, 255, 0.5);
+     background-color: rgba(255, 255, 255, 0.6);
      transition: all 0.5s;
      backdrop-filter: blur(15px);
      .navigationContent {
